clusters/my-k3s/apps/base/wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: default
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - host: app.local1
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
